// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`formatAnnexIVReference() > DE snapshot — 9 numbered Annex IV requirements 1`] = `
"Anhang IV — Technische Dokumentation (Verordnung (EU) 2024/1689)

  1. Allgemeine Beschreibung des KI-Systems.
  2. Detaillierte Beschreibung der Bestandteile des KI-Systems und seines Entwicklungsprozesses.
  3. Detaillierte Informationen über die Überwachung, Funktionsweise und Kontrolle des KI-Systems.
  4. Darlegungen zur Eignung der Leistungskennzahlen für das spezifische KI-System.
  5. Detaillierte Beschreibung des Risikomanagementsystems gemäß Artikel 9.
  6. Beschreibung einschlägiger Änderungen, die der Anbieter während des Lebenszyklus an dem System vorgenommen hat.
  7. Aufstellung der vollständig oder teilweise angewandten harmonisierten Normen, deren Fundstellen im Amtsblatt der Europäischen Union veröffentlicht wurden.
  8. Kopie der EU-Konformitätserklärung gemäß Artikel 47.
  9. Detaillierte Beschreibung des Systems zur Bewertung der Leistung des KI-Systems in der Phase nach dem Inverkehrbringen gemäß Artikel 72.

Quelle: EUR-Lex Verordnung (EU) 2024/1689, Anhang IV

⚠ Informationelles Werkzeug — keine Rechtsberatung. Siehe README §Disclaimer."
`;

exports[`formatAnnexIVReference() > EN snapshot — 9 numbered Annex IV requirements 1`] = `
"Annex IV — Technical documentation (Regulation (EU) 2024/1689)

  1. A general description of the AI system.
  2. A detailed description of the elements of the AI system and of the process for its development.
  3. Detailed information about the monitoring, functioning and control of the AI system.
  4. A description of the appropriateness of the performance metrics for the specific AI system.
  5. A detailed description of the risk management system in accordance with Article 9.
  6. A description of relevant changes made by the provider to the system through its lifecycle.
  7. A list of the harmonised standards applied in full or in part, the references of which have been published in the Official Journal of the European Union.
  8. A copy of the EU declaration of conformity referred to in Article 47.
  9. A detailed description of the system in place to evaluate the AI system performance in the post-market phase in accordance with Article 72.

Source: EUR-Lex Regulation (EU) 2024/1689, Annex IV

⚠ Informational tool — not legal advice. See README §Disclaimer."
`;

exports[`formatCliTable() — Article 5 prohibition fixture (EN) > matches snapshot — Art 5 prohibited variant 1`] = `
"  EU AI Act mapping
  Article 5  (prohibited): PROHIBITED
  Article 6  + Annex III:      suppressed by Art 5
  Article 10 (data governance): not applicable
  Article 12 (logging/record-keeping): not applicable
  Article 13 (deployer transparency): not applicable
  Article 14 (human oversight): not applicable
  Article 15 (accuracy/robustness/cybersecurity): not applicable
  Article 50 (GPAI/deployer):  not triggered
  Annex IV  (technical docs):  not applicable

  Lucairn obligation overlay
  Cat 1 Sanitizer  (Art 10+15):  not applicable
  Cat 2 Evidence   (Art 12+14):  not applicable
  Cat 3 Inventory  (Art 10+12+14+15): not applicable

  Confidence: 0.48   Mode: deterministic   Rules: v0.2.0 (sha256:3c507ccc…)

  ⚠ Informational tool — not legal advice. See README §Disclaimer."
`;

exports[`formatCliTable() — high-risk fixture (DE) > matches snapshot when useColor: false, cite: false, three-category: on 1`] = `
"  EU-KI-VO-Zuordnung
  Artikel 5  (verboten): nicht ausgelöst
  Artikel 6  + Anhang III:      HOCHRISIKO
    └─ Anhang III.4(a) — Beschäftigung, Personalmanagement und Zugang zur Selbstständigkeit
  Artikel 10 (Daten-Governance): anwendbar
  Artikel 12 (Protokollierung/Aufzeichnungen): anwendbar
  Artikel 13 (Betreiber-Transparenz): anwendbar
  Artikel 14 (menschliche Aufsicht): anwendbar
  Artikel 15 (Genauigkeit/Robustheit/Cybersicherheit): anwendbar
  Artikel 50 (GPAI/Betreiber):  nicht ausgelöst
  Anhang IV  (technische Dokumentation):  ERFORDERLICH

  Lucairn-Pflichten-Overlay
  Kat 1 Sanitizer  (Art. 10+15):  ERFORDERLICH
  Kat 2 Evidence   (Art. 12+14):  ERFORDERLICH
  Kat 3 Inventory  (Art. 10+12+14+15): ERFORDERLICH

  Konfidenz: 0.44   Modus: deterministic   Regeln: v0.2.0 (sha256:3c507ccc…)

  ⚠ Informationelles Werkzeug — keine Rechtsberatung. Siehe README §Disclaimer."
`;

exports[`formatCliTable() — high-risk fixture (EN) > matches snapshot when cite: true (adds Cite block) 1`] = `
"  EU AI Act mapping
  Article 5  (prohibited): not triggered
  Article 6  + Annex III:      HIGH-RISK
    └─ Annex III.4(a) — Employment, workers' management and access to self-employment
  Article 10 (data governance): applies
  Article 12 (logging/record-keeping): applies
  Article 13 (deployer transparency): applies
  Article 14 (human oversight): applies
  Article 15 (accuracy/robustness/cybersecurity): applies
  Article 50 (GPAI/deployer):  not triggered
  Annex IV  (technical docs):  REQUIRED

  Lucairn obligation overlay
  Cat 1 Sanitizer  (Art 10+15):  REQUIRED
  Cat 2 Evidence   (Art 12+14):  REQUIRED
  Cat 3 Inventory  (Art 10+12+14+15): REQUIRED

  Confidence: 0.56   Mode: deterministic   Rules: v0.2.0 (sha256:3c507ccc…)
  Cite: https://eur-lex.europa.eu/legal-content/EN/TXT/HTML/?uri=OJ:L_202401689
         https://artificialintelligenceact.eu/article/6/
         https://artificialintelligenceact.eu/article/10/
         https://artificialintelligenceact.eu/article/12/
         https://artificialintelligenceact.eu/article/13/
         https://artificialintelligenceact.eu/article/14/
         https://artificialintelligenceact.eu/article/15/
         https://artificialintelligenceact.eu/annex/4/
         https://lucairn.eu/en/blog/eu-ai-act-architecture-2026 (commentary)

  ⚠ Informational tool — not legal advice. See README §Disclaimer."
`;

exports[`formatCliTable() — high-risk fixture (EN) > matches snapshot when useColor: false, cite: false, three-category: on 1`] = `
"  EU AI Act mapping
  Article 5  (prohibited): not triggered
  Article 6  + Annex III:      HIGH-RISK
    └─ Annex III.4(a) — Employment, workers' management and access to self-employment
  Article 10 (data governance): applies
  Article 12 (logging/record-keeping): applies
  Article 13 (deployer transparency): applies
  Article 14 (human oversight): applies
  Article 15 (accuracy/robustness/cybersecurity): applies
  Article 50 (GPAI/deployer):  not triggered
  Annex IV  (technical docs):  REQUIRED

  Lucairn obligation overlay
  Cat 1 Sanitizer  (Art 10+15):  REQUIRED
  Cat 2 Evidence   (Art 12+14):  REQUIRED
  Cat 3 Inventory  (Art 10+12+14+15): REQUIRED

  Confidence: 0.56   Mode: deterministic   Rules: v0.2.0 (sha256:3c507ccc…)

  ⚠ Informational tool — not legal advice. See README §Disclaimer."
`;

exports[`formatCliTable() — high-risk fixture (EN) > matches snapshot with --no-three-category (overlay suppressed note) 1`] = `
"  EU AI Act mapping
  Article 5  (prohibited): not triggered
  Article 6  + Annex III:      HIGH-RISK
    └─ Annex III.4(a) — Employment, workers' management and access to self-employment
  Article 10 (data governance): applies
  Article 12 (logging/record-keeping): applies
  Article 13 (deployer transparency): applies
  Article 14 (human oversight): applies
  Article 15 (accuracy/robustness/cybersecurity): applies
  Article 50 (GPAI/deployer):  not triggered
  Annex IV  (technical docs):  REQUIRED

  Lucairn obligation overlay
  Lucairn obligation overlay suppressed via --no-three-category.

  Confidence: 0.56   Mode: deterministic   Rules: v0.2.0 (sha256:3c507ccc…)

  ⚠ Informational tool — not legal advice. See README §Disclaimer."
`;
